--- a/index.html
+++ b/index.html
@@ -140,30 +140,36 @@
     const logContainer = document.getElementById('logContainer');
     let uploadedImageData = '';
 
-    document.getElementById('imageUpload').addEventListener('change', function () {
-      const file = this.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function (e) {
-          const img = new Image();
-          img.onload = function () {
-            const canvas = document.createElement('canvas');
-            const MAX_WIDTH = 500;
-            const scale = MAX_WIDTH / img.width;
-            canvas.width = MAX_WIDTH;
-            canvas.height = img.height * scale;
-            const ctx = canvas.getContext('2d');
-            ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-            uploadedImageData = canvas.toDataURL('image/jpeg', 0.8);
-            preview.src = uploadedImageData;
-            preview.style.display = 'block';
-          };
-          img.src = e.target.result;
-        };
-        reader.readAsDataURL(file);
-      }
-    });
 
+document.getElementById('imageUpload').addEventListener('change', function () {
+  const file = this.files[0];
+  if (!file) return;
+
+  const reader = new FileReader();
+  reader.onload = function (e) {
+    const img = new Image();
+    img.onload = function () {
+      const canvas = document.createElement('canvas');
+      const MAX_WIDTH = 500;
+      const scale = MAX_WIDTH / img.width;
+      canvas.width = MAX_WIDTH;
+      canvas.height = img.height * scale;
+      const ctx = canvas.getContext('2d');
+      ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+      uploadedImageData = canvas.toDataURL('image/jpeg', 0.8);
+
+      // Set preview
+      preview.src = uploadedImageData;
+      preview.style.display = 'block';
+    };
+    img.onerror = function () {
+      alert("Failed to load image.");
+      uploadedImageData = '';
+    };
+    img.src = e.target.result;
+  };
+  reader.readAsDataURL(file);
+});
     async function renderBeanCard(imageSrc, name, origin, method, rating) {
       return new Promise((resolve, reject) => {
         const canvas = document.createElement('canvas');
